# aoc2025

./: .gitignore  DESIGN.md  README.md  SOLVING.md  deploy.sh  pyproject.toml  run_benchmarks.sh
aoc2025/: __init__.py  __main__.py  cli.py  core.py  dashboard.py  db.py  freeze.py
aoc2025/days/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
aoc2025/templates/: day_detail.html  index.html  run_detail.html
